# UnoLoader

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
doc/bootloader/: parts.md  plan.md  tasks.md
src/: main.cpp
src/include/: bootloader.h  interrupt.h  led.h  loader_core.h  settings.h  timer.h  uart.h  watchdog.h
src/lib/: led.cpp  pages.s  timer.cpp  uart.cpp  watchdog.cpp
